# hyprprof

./: .clang-format  :w  CMakeLists.txt  README.md  ROADMAP.md  hyprprof.json  install  install.sh  main  main.cpp
cli/: CMakeLists.txt  cli_log.cpp  cli_log.hpp  cmd.cpp  cmd.hpp  dispatcher.cpp  dispatcher.hpp  main.cpp  message.hpp
concepts/: yacc_schema.json
doc/: cli.md  create_profile.md  installation.md  json.md  manifest.md  profile.md  project.md
eng/: create_my_hyprpof.sh
example/profile1/: hyprprof.json
include/: backup_helper.hpp  config_file.hpp  dotconfig.hpp  dotfile.hpp  environment.hpp  fs.hpp  global_config.hpp  hyprprof.hpp  hyprprof_path.hpp  log.hpp  profile_layout.hpp  profile_layout_helper.hpp  timestamp.hpp  xdg_session_type.hpp
include/app/: app_service.hpp  install.hpp
include/appservice/: install.hpp  show_profile.hpp
include/cli/: cli_commands.hpp  messages.hpp
include/core/: current_profile.hpp  environment.hpp  hyprprof.hpp  hyprprof_path.hpp  json_current_profile.hpp  json_manifest.hpp  json_schemas.hpp  payload_validator.hpp  profile.hpp  profile_layout.hpp  profile_payload.hpp
include/domain/: environment.hpp  payload_validator.hpp
include/enum/: package_manager.hpp  package_manager_enum.hpp  xdg_session_type.hpp  xdg_session_type_enum.hpp
include/fs/: dir.hpp  dotconfig.hpp  file.hpp
include/infra/: cmd.hpp  json.hpp  log.hpp  version.hpp
include/json/: global_config.hpp  json_base.hpp  json_exceptions.hpp  json_file_parser.hpp  json_manifest_reader.hpp  json_manifest_writer.hpp  json_profile_list.hpp  json_profile_list_reader.hpp  json_profile_list_writer.hpp  json_schema.hpp  json_schema_validator.hpp  log.hpp
include/net/: base.hpp  download.hpp
include/os/: cmd.hpp  env.hpp  exception.hpp  hyprctl.hpp  pack.hpp
include/profile/: exceptions.hpp  profile_layout.hpp  profile_layout_exceptions.hpp  profile_model.hpp  version_constraits_validator.hpp
include/use_cases/: create.hpp  install.hpp  internet_install.hpp  show_things.hpp  update.hpp  use.hpp  username.hpp
include/utils/: log.hpp  macros.hpp  version.hpp
src/: backup_helper.cpp  config_file.cpp  current_profile.cpp  dotconfig.cpp  dotfile.cpp  environment.cpp  fs.cpp  global_config.cpp  hyprprof_path.cpp  main.cpp  profile_layout.cpp  profile_layout_helper.cpp  timestamp.cpp
src/app/: app_service.cpp  install.cpp
src/appservice/: install.cpp  show_profile.cpp
src/cli/: cli_commands.cpp  main.cpp
src/core/: current_profile.cpp  environment.cpp  hyprprof.cpp  hyprprof_path.cpp  json_current_profile.cpp  json_manifest.cpp  payload_err_to_string.cpp  payload_validator.cpp  profile.cpp  profile_layout.cpp  profile_payload.cpp
src/domain/: environment.cpp  (+3 more)
test/: CMakeLists.txt  hyprland_version.cpp  log.cpp
test/integration/: CMakeLists.txt  install.cpp  integration1.cpp  test_install.cpp
test/json/: search_alg.cpp
(+91 files in other folders)
